--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
 
         <section class="login">
             <h4>Inicio de sesión</h4>
-            <label for="correo">Nombre:</label>
+            <label for="correo">Correo:</label>
             <input class="contrologin" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
             <label for="password">Contraseña:</label>
             <input class="contrologin" type="password" name="password" id="password" placeholder="Ingrese su contraseña">
