se implemento consultas a la api de cheapshark para buscar juegos

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
             </div>
         </header>
 
-        <section class="login">
+        <form class="login" id="form-login">
             <h4>Inicio de sesión</h4>
             <label for="correo">Correo:</label>
             <input class="contrologin" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
@@ -41,12 +41,13 @@
             <p><a href= "recover.html">Olvidé mi contraseña</a></p>
             <p id="centro">¿No tienes cuenta? <a href="register.html">Crear cuenta</a></p>
             
-        </section>
+        </form>
 
         <footer>
             <p>© 2021 Top Games. Todos los derechos reservados.</p>
         </footer>
 
+        <script src="/assets/js/LogicaInicioSesion.js"></script>
     </div>
 </body>
 </html>
