creacion de rutas

--- a/login.html
+++ b/login.html
@@ -19,12 +19,12 @@
             <div class = "container">
 
                 <div class = "logo">
-                    <a href="index.html" class="texto-logo"><h1>Top Games</h1></a>
+                    <a href="index" class="texto-logo"><h1>Top Games</h1></a>
                 </div>
 
                 <nav class= "menu">
-                    <a href= "login.html"> Iniciar sesión </a>
-                    <a href= "register.html"> Registrate </a>
+                    <a href= "login"> Iniciar sesión </a>
+                    <a href= "register"> Registrate </a>
                 </nav>
             </div>
         </header>
