--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class = "container">
 
                 <div class = "logo">
-                    <a href="index.html" class="texto-logo"><h1>Top Games</h1></a>
+                    <a href="#/index" class="texto-logo"><h1>Top Games</h1></a>
                 </div>
                 <form class="busqueda" id="search">
                     <input class="barra-busqueda" type="text" placeholder="Buscar juego">
@@ -27,8 +27,8 @@
                 </form>
 
                 <nav class= "menu">
-                    <a href= "login.html"> Iniciar sesión </a>
-                    <a href= "register.html"> Registrate </a>
+                    <a href= "#/login"> Iniciar sesión </a>
+                    <a href= "#/register"> Registrate </a>
                 </nav>
             </div>
         </header>
@@ -104,7 +104,7 @@
 
 
     </div>
-    
+    <script src="./assets/js/rutas.js"></script>
     <script src="./assets/js/api.js"></script>
 </body>
 </html>
