se arreglo el uso de rutas

--- a/register.html
+++ b/register.html
@@ -1,33 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/assets/img/favicon.png" sizes="64x64">
-    <title>Top Games | Venta de juegos digitales</title>
 
-    <link rel="stylesheet" href="assets/css/main.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" 
-        crossorigin="anonymous" />
-</head>
-<body>
-    <div id="fondo"></div>
-    <div class="contenedor-principal">
-        <header class= "encabezado">
-            <div class = "container">
-
-                <div class = "logo">
-                    <a href="index.html" class="texto-logo"><h1>Top Games</h1></a>
-                </div>
-
-                <nav class= "menu">
-                    <a href= "login.html"> Iniciar sesión </a>
-                    <a href= "register.html"> Registrate </a>
-                </nav>
-            </div>
-        </header>
         <form id ="form-registro" class="registro">
             <h4>Crear nueva cuenta</h4>
             <label for="nombres">Nombre:</label>
@@ -42,12 +13,6 @@
                 <input id="cajita" type="checkbox" class="tyc">Estoy de acuerdo con los <a href= "#">Términos y condiciones</a>.
             </div>
             <input class="botonreg" type="submit" value="Crear cuenta">
-            <p><a href="login.html">Iniciar sesión</a></p>
+            <p><a href="#/login">Iniciar sesión</a></p>
         </form>
-        <footer>
-            <p>© 2021 Top Games. Todos los derechos reservados.</p>
-        </footer>
-    </div>
-    <script src="assets/js/localstorage.js"></script>
-</body>
-</html>
+        
