--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class = "container">
 
                 <div class = "logo">
-                    <a href="#/index" class="texto-logo"><h1>Top Games</h1></a>
+                    <a href="#/" class="texto-logo"><h1>Top Games</h1></a>
                 </div>
                 <form class="busqueda" id="search">
                     <input class="barra-busqueda" type="text" placeholder="Buscar juego">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-
+            
             <div class='titulo-juegos'>
                 <h2 class="titulo">Juegos TOP</h2>
                 <hr>
@@ -106,5 +106,8 @@
     </div>
     <script src="./assets/js/rutas.js"></script>
     <script src="./assets/js/api.js"></script>
+    <script src="./assets/js/localstorage.js"></script>
+    <script src="./assets/js/LogicaInicioSesion.js"></script>
+    
 </body>
 </html>
