--- a/login.html
+++ b/login.html
@@ -1,35 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/assets/img/favicon.png" sizes="64x64">
-    <title>Top Games | Venta de juegos digitales</title>
-
-    <link rel="stylesheet" href="assets/css/main.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" 
-        crossorigin="anonymous" />
-</head>
-<body>
-    <div id="fondo"></div>
-    <div class="contenedor-principal">
-        <header class= "encabezado">
-            <div class = "container">
-
-                <div class = "logo">
-                    <a href="index" class="texto-logo"><h1>Top Games</h1></a>
-                </div>
-
-                <nav class= "menu">
-                    <a href= "login"> Iniciar sesión </a>
-                    <a href= "register"> Registrate </a>
-                </nav>
-            </div>
-        </header>
-
-        <form class="login" id="form-login">
+<form class="login" id="form-login">
             <h4>Inicio de sesión</h4>
             <label for="correo">Correo:</label>
             <input class="contrologin" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
@@ -38,16 +7,7 @@
             
             <input class="botonreg" type="submit" value="Iniciar sesión">
 
-            <p><a href= "recover.html">Olvidé mi contraseña</a></p>
-            <p id="centro">¿No tienes cuenta? <a href="register.html">Crear cuenta</a></p>
+            <p><a href= "#/recover">Olvidé mi contraseña</a></p>
+            <p id="centro">¿No tienes cuenta? <a href="#/register">Crear cuenta</a></p>
             
-        </form>
-
-        <footer>
-            <p>© 2021 Top Games. Todos los derechos reservados.</p>
-        </footer>
-
-        <script src="/assets/js/LogicaInicioSesion.js"></script>
-    </div>
-</body>
-</html>
+</form>    
