se creo la pagina de perfil y logout, se pueden cargar y actualizar los datos del localStorage, aparece un saludo al iniciar sesion

--- a/register.html
+++ b/register.html
@@ -1,5 +1,5 @@
 
-        <form id ="form-registro" class="registro">
+        <form id="form-registro" class="registro" onsubmit="validarForm(event)">
             <h4>Crear nueva cuenta</h4>
             <label for="nombres">Nombre:</label>
             <input class="controreg" type="text" name="nombres" id="nombres" placeholder="Ingrese su nombre">
