--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
                     <button class="btn-busqueda" type="submit"><i class="fas fa-search"></i></button>
                 </form>
 
-                <nav class= "menu">
+                <nav class= "menu" id="menu">
                     <a href= "#/login"> Iniciar sesión </a>
                     <a href= "#/register"> Registrate </a>
+                </nav>
+                <nav class= "menu" id="menu-user">
+                    <h2 id='saludo'></h2> <i class="fas fa-sort-down" onclick="abrirMenu()"></i>
+                    <div class="dropdown-menu">
+                        <a href= "#/perfil"> Mi perfil </a>
+                        <a href= "#/logout" onclick="cerrarSesion()"> Cerrar sesión </a>
+                    </div>
+                    
                 </nav>
             </div>
         </header>
@@ -108,6 +116,18 @@
     <script src="./assets/js/api.js"></script>
     <script src="./assets/js/localstorage.js"></script>
     <script src="./assets/js/LogicaInicioSesion.js"></script>
+    <script src="./assets/js/perfil.js"></script>
+    <script>
+        function abrirMenu() {
+            var dropMenu = document.querySelector('.dropdown-menu').style;
+
+            if(dropMenu.display == 'block'){
+                dropMenu.display = 'none';
+            }else{
+                dropMenu.display = 'block';
+            }
+        }
+    </script>
     
 </body>
 </html>
