--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<form class="login" id="form-login">
+<form class="login" id="form-login" onsubmit="iniciarSesion(event)">
             <h4>Inicio de sesión</h4>
             <label for="correo">Correo:</label>
             <input class="contrologin" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
